[project]
name = "grpo"
version = "0.1.0"
description = "simple grpo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "fastapi>=0.115.12",
    "qwen-vl-utils>=0.0.11",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "transformers>=4.51.1",
    "uvicorn>=0.34.0",
    "vllm>=0.8.3",
    "wandb>=0.19.11",
    "peft",
    "ipython",
    "jupyter",
    "ipykernel",
    "rich",
]
